# aitutor

./: README.md  pyproject.toml
db/: chroma.sqlite3
src/aitutor/: crew.py  data_processing.ipynb  main.py
src/aitutor/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.py
src/aitutor/config/: agents.yaml  tasks.yaml
src/aitutor/tools/: custom_tool.py
