[project]
name = "aitutor"
version = "0.1.0"
description = "aitutor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
aitutor = "aitutor.main:run"
run_crew = "aitutor.main:run"
train = "aitutor.main:train"
replay = "aitutor.main:replay"
test = "aitutor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
